Addressing PR comments.